--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,39 +13,40 @@ dependencies:
     sdk: flutter
 
   auto_size_text: ^3.0.0
-  charts_flutter: ^0.12.0
-  cloud_firestore: ^4.13.6
+  community_charts_flutter: ^1.0.4
+  cloud_firestore: ^6.1.1
   expandable: ^5.0.1
-  firebase_analytics: ^10.7.4
-  firebase_core: ^2.24.2
-  firebase_crashlytics: ^3.4.8
-  firebase_performance: ^0.9.3
-  firebase_remote_config: ^4.3.8
+  firebase_analytics: ^12.1.0
+  firebase_core: ^4.3.0
+  firebase_crashlytics: ^5.0.6
+  firebase_performance: ^0.11.1
+  firebase_remote_config: ^6.1.3
   flutter_pagewise:
-    git: https://github.com/javoeria/flutter_pagewise.git
-  flutter_web_auth: ^0.5.0
-  fluttertoast: ^8.2.4
-  font_awesome_flutter: ^10.6.0
-  intl: ^0.17.0
+    git: https://github.com/javrosales/flutter_pagewise.git
+  flutter_web_auth_2: ^4.1.0
+  fluttertoast: ^9.0.0
+  font_awesome_flutter: ^10.12.0
+  intl: ^0.20.2
   jikan_api: ^2.2.1
-  package_info_plus: ^5.0.1
-  page_indicator: ^0.4.1
-  photo_view: ^0.14.0
-  provider: ^6.1.1
-  rate_my_app: ^2.0.0
-  shared_preferences: ^2.2.2
-  slack_notifier: ^1.4.0
-  url_launcher: ^6.2.2
-  xml: ^6.5.0
+  package_info_plus: ^9.0.0
+  page_indicator:
+    git: https://github.com/Aakash574/flutter_page_indicator.git
+  photo_view: ^0.15.0
+  provider: ^6.1.5
+  rate_my_app: ^2.3.2
+  shared_preferences: ^2.5.4
+  slack_notifier: ^1.4.1
+  url_launcher: ^6.3.2
+  xml: ^6.6.1
 
 dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: any
 
-  flutter_lints: ^3.0.1
-  flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.8
+  flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.7
 
 flutter_launcher_icons:
   android: true
