--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: The best way to explore all anime and manga.
 
 publish_to: 'none'
 
-version: 1.5.1+19
+version: 1.6.0+20
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ^3.10.0
 
 dependencies:
   flutter:
@@ -21,21 +21,19 @@ dependencies:
   firebase_crashlytics: ^5.0.6
   firebase_performance: ^0.11.1
   firebase_remote_config: ^6.1.3
-  flutter_pagewise:
-    git: https://github.com/javrosales/flutter_pagewise.git
-  flutter_web_auth_2: ^4.1.0
+  flutter_pagewise: ^2.0.4
+  flutter_web_auth_2: ^5.0.0
   fluttertoast: ^9.0.0
   font_awesome_flutter: ^10.12.0
   intl: ^0.20.2
-  jikan_api: ^2.2.1
+  jikan_api: ^2.3.0
   package_info_plus: ^9.0.0
-  page_indicator:
-    git: https://github.com/Aakash574/flutter_page_indicator.git
   photo_view: ^0.15.0
   provider: ^6.1.5
   rate_my_app: ^2.3.2
   shared_preferences: ^2.5.4
   slack_notifier: ^1.4.1
+  smooth_page_indicator: ^2.0.1
   url_launcher: ^6.3.2
   xml: ^6.6.1
 
